2008-07-07  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCmdIL.c (InfoFrameCmd): Fixed unsafe idiom of setting
	the interp result found by Don Porter.

2008-07-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/regexp.n, doc/regsub.n: Correct examples. [Bug 1982642]

2008-07-04  Joe English  <jenglish@users.sourceforge.net>

	* generic/tclEncoding.c(UtfToUtfProc): Avoid unwanted sign extension
	when converting incomplete UTF-8 sequences. See [Bug 1908443] for
	details.

2008-07-03  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIORChan.c (InvokeTclMethod): Fixed the memory leak
	  reported in [Bug 1987821]. Thanks to Miguel for the rpeort and
	  Don Porter for tracking the cause down.

2008-07-03  Don Porter  <dgp@users.sourceforge.net>

	* library/package.tcl:  Removed [file readable] testing from
	[tclPkgUnknown] and friends.  We find out soon enough whether a
	file is readable when we try to [source] it, and not testing
	before allows us to workaround the bugs on some common filesystems
	where [file readable] lies to us.  [Patch 1969717]

2008-06-29  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.3 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.3 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* doc/ObjectType.3:	Updated documentation of the Tcl_ObjType
	struct to match expectations of Tcl 8.5 [Bug 1917650].

	* generic/tclPathObj.c:  Plug memory leak in [Bug 1999176] fix.  Thanks
	Rolf Ade for detecting.

2008-06-28  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c:  Plug memory leak in [Bug 1972879] fix.  Thanks
	Rolf Ade for detecting and Dan Steffen for the fix [Bug 2004654].

2008-06-26  Andreas Kupries  <andreask@activestate.com>

	* unix/Makefile.in: Followup to my change of 2008-06-25, make code
	generated by the Makefile and put into the installd tm.tcl